# pipeline-monitor

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  DEMO_GUIDE_RU.txt  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  ci_monitor.py  compose.yml  config.example.yaml  config.yaml  config_migrations.py  proxy_install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
clients/: __init__.py  base.py  gitlab_client.py  jenkins_client.py
data/: ci_report.csv  ci_report.html
docker/: entrypoint.sh
docker_monitor/: __init__.py  monitor.py
docs/: DEVELOPER_GUIDE.md  HOW_FILTERS_WORK_END_TO_END.md  KPI_FAQ.md  RUNBOOK_INCIDENTS.md  USER_GUIDE.md  WORKFLOW.md
models/: __init__.py  models.py
notifications/: __init__.py  telegram_notifier.py
parsers/: __init__.py  allure_failure_text.py  allure_parser.py  allure_rich_meta.py  base.py  jenkins_allure_parser.py  jenkins_console_parser.py  pytest_parser.py
reports/: __init__.py  console_report.py  csv_report.py  html_report.py
sample_logs/: sample-allure-result.json  sample_pytest.xml
tests/: conftest.py  test_allure_rich_meta.py  test_auth_and_config.py  test_chat_prompts.py  test_clients.py  test_collect_interval_policy.py  test_collect_sync_safeguard.py  test_contracts.py  test_e2e_mocked_ci_collect_and_app.py  test_filters_frontend_contracts.py  test_jenkins_merge_unified_tests.py  test_notifications_grouping.py  test_parsers.py  test_property_parsers_and_webhook.py  test_smoke.py  test_snapshot_docker_inplace.py  test_snapshot_trends_cache.py  test_sqlite_history.py  (+3 more)
(+340 files in other folders)
