[project]
name = "cicd-mon"
version = "0.0.0"
description = "CI/CD Monitor — dashboards, exports, and integrations"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["web", "models", "parsers", "clients", "docker_monitor", "notifications", "reports"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
extend-ignore = ["UP045"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 120
target-version = ["py39"]
extend-exclude = "/(\\.venv|venv|build|dist)/"
